# sparkey

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  Makefile.am  NOTICE  README.md  configure.ac
debian/: changelog  control  copyright  libsparkey-dev.install  rules  sparkey-bin.install  sparkey-doc.docs
src/: CMakeLists.txt  Makefile.am  MurmurHash3.c  bench.c  compress.c  endiantools.c  hashreader.c  hashwriter.c  logheader.c  logreader.c  logwriter.c  main.c  returncodes.h  sparkey-internal.h  sparkey.h  testhash.c  testsystem.c  testutil.c  testvlq.c  util.c
